added text styling, changed p tags to span for each uv index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,19 @@
+h1 {
+    color: #fff;
+}
+
+li {
+    color: #fff;
+}
+
+span {
+    color: green;
+}
+
 .box {
     background-color: lightslategray;
+}
+
+.border-bottom {
+    border-bottom: solid black;
 }
