--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 h1 {
     color: #fff;
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 li {
     color: #fff;
+    font-weight: bold;
 }
 
 span {
@@ -16,6 +19,14 @@ span {
 
 .border-bottom {
     border-bottom: solid black;
+}
+
+.margin-bottom {
+    margin-bottom: 1.5rem;
+}
+
+.small-margin-bottom {
+    margin-bottom: 0.5rem;
 }
 
 .black {
