--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 h1 {
     color: #fff;
-    font-size: 1rem;
+    /* font-size: 1rem; */
     font-weight: bold;
 }
 
@@ -11,6 +11,14 @@ li {
 
 span {
     color: green;
+}
+
+.large-text {
+    font-size: 2rem;
+}
+
+.medium-text {
+    font-size: 1.5rem;
 }
 
 .box {
